# gossip

./: README.md
Gossip/Gossip/: AppDelegate.swift  BGExperiment.swift  ContentView.swift  DeviceApiProvider.swift  GossipApp.swift  Info.plist  libgossip.swift
Gossip/Gossip.xcodeproj/: project.pbxproj
Gossip/Gossip.xcodeproj/xcshareddata/xcschemes/: Gossip.xcscheme
Gossip/Gossip/Assets.xcassets/sylvie.imageset/: Contents.json
Gossip/Gossip/Bluetooth/: BLEGossipBroadcaster.swift  BLEGossipScanner.swift  CBUUIDExtension.swift  UUIDExtension.swift
Gossip/Gossip/ViewModels/: GlobalViewModel.swift  NearbyPersonDetailsVM.swift  NodeStatsVM.swift  PhotosViewVM.swift
Gossip/Gossip/Views/: ControlsContainer.swift
Gossip/Gossip/Views/Bridge/: AppHostContainer.swift  BlobCache.swift  BlobLoader.swift  CollectionDelegate.swift  CollectionLoader.swift  (+2 more)
libgossip/: .gitignore  Cargo.toml  generate-bindings.sh
libgossip/bindings/: libgossip.swift  libgossipFFI.h  libgossipFFI.modulemap
libgossip/libgossip.xcodeproj/: project.pbxproj
libgossip/libgossip.xcodeproj/xcshareddata/xcschemes/: libgossip.a.xcscheme
libgossip/libgossip.xcodeproj/xcuserdata/kevin.xcuserdatad/xcschemes/: xcschememanagement.plist
libgossip/src/: ble.rs  blob_dispatcher.rs  data.rs  device.rs  doc.rs  events.rs  fingerprinter.rs  invite.rs  lib.rs  settings.rs
libgossip/src/identity/: domain.rs  mod.rs  model.rs
libgossip/src/nearby/: mod.rs  model.rs  peer_calc.rs  post.rs
libgossip/src/views/: errors.rs  mod.rs  nearby_details.rs  node_stat.rs
libgossip/uniffi-bindgen/: Cargo.toml
(+19 files in other folders)
