[package]
name = "libgossip"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = "1.0.86"
iroh = { version ="0.22.0", features = [] }
serde = { version = "1.0.204", features = ["serde_derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uniffi = { version = "0.28.0", features = ["tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
futures-util = "0.3.30"
flexbuffers = "2.0.0"
async-trait = "0.1.80"
bytes = "1.6.0"
base64 = "0.22.1"
tracing = "0.1.40"
log = "0.4.22"
postcard = "1.0.8"
cargo-xcode = "1.11.0"
futures-lite = "2.3.0"
rand = "0.8.5"

[build-dependencies]
uniffi_build = "0.28.0"
uniffi_bindgen = "0.28.0"
